# ora_doc_monitor

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  doc_extractor.py  playwright_possibility.MD  pyproject.toml  url_extract.py
source/: auth_extractor.py  cli.py  diff_docs.py  doc_extractor.py  doc_sources.json  interface.py  logger.py  url_extract.py  url_extractor.py
tests/: test_auth_extractor.py  test_cli.py  test_diff_docs.py  test_doc_extractor.py  test_url_extractor.py
