[project]
name = "oradocmonitor"
version = "1.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "click>=8.2.1",
    "loguru>=0.7.3",
    "playwright>=1.48.0",
    "psutil>=7.0.0",
    "pyotp>=2.9.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "poethepoet>=0.47.1",
    "pre-commit>=4.2.0",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.9.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["source"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.9
target-version = "py312"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    #TODO: Remove? PEP 3120
    "UP009"
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

# ---------------------------------------------------------------------------
# poe the poet tasks
# ---------------------------------------------------------------------------

[tool.poe.env]
PYTHONPATH = "source"

[tool.poe.tasks.sync]
help     = "Upgrade all deps (no cache) and reinstall Playwright Firefox"
sequence = [
    { cmd = "uv --no-cache sync --upgrade" },
    { cmd = "playwright install firefox" },
]

[tool.poe.tasks.lint]
help = "Run ruff linter"
cmd  = "ruff check source/"

[tool.poe.tasks.lint-fix]
help = "Run ruff linter with auto-fix"
cmd  = "ruff check source/ --fix"

[tool.poe.tasks.format]
help = "Run ruff formatter"
cmd  = "ruff format source/"

[tool.poe.tasks.format-check]
help = "Check formatting without writing changes"
cmd  = "ruff format source/ --check"

[tool.poe.tasks.check]
help     = "Lint + format-check (CI-style, no writes)"
sequence = [
    { ref = "lint" },
    { ref = "format-check" },
]

[tool.poe.tasks.test]
help = "Run the test suite"
cmd  = "pytest -q"

[tool.poe.tasks.run]
help = "Download all docs (auth + public) then diff"
cmd  = "uv run python -m source.cli"

[tool.poe.tasks.run-auth]
help = "Auth (MOS) docs only"
cmd  = "uv run python -m source.cli --auth_docs"

[tool.poe.tasks.run-noauth]
help = "Public docs only"
cmd  = "uv run python -m source.cli --no_auth_docs"

[tool.poe.tasks.run-headed]
help = "Run with browser window visible (useful for Playwright debugging)"
cmd  = "uv run python -m source.cli --headed"
